--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@napi-rs/canvas": "^0.1.30",
     "axios": "^1.2.2",
     "discord.js": "^14.6.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "mongoose": "^6.8.2"
   }
 }
