--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
   "description": "Minecraftサーバーの統計を表示するBOT",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon .",
-    "reset": "node .\\resetCommands.js"
+    "start": "node build/src/index.js",
+    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
+    "reset": "node --loader ts-node/esm src/resetCommands.ts",
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@akki256/discord-interaction": "^1.0.1",
+    "@akki256/discord-interaction": "^2.0.4",
     "@discordjs/rest": "^1.5.0",
     "@napi-rs/canvas": "^0.1.30",
+    "@swc/core": "^1.3.27",
+    "@swc/helpers": "^0.4.14",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
     "axios": "^1.2.2",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
-    "mongoose": "^6.8.2"
+    "mongoose": "^6.8.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
