--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "@akki256/discord-interaction": "^2.0.4",
-    "@discordjs/rest": "^1.5.0",
     "@napi-rs/canvas": "^0.1.30",
-    "@swc/core": "^1.3.27",
-    "@swc/helpers": "^0.4.14",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
     "axios": "^1.2.2",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "mongoose": "^6.8.2",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "@swc/core": "^1.3.27",
+    "@swc/helpers": "^0.4.14",
+    "@typescript-eslint/eslint-plugin": "^5.48.2"
   }
 }
