--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1",
     "@swc/core": "^1.3.27",
     "@swc/helpers": "^0.4.14",
-    "@typescript-eslint/eslint-plugin": "^5.48.2"
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "eslint": "^8.32.0",
+    "ts-node": "^10.9.1"
   }
 }
