--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@akki256/discord-interaction": "^2.1.1",
     "@napi-rs/canvas": "^0.1.36",
     "axios": "^1.3.3",
-    "discord.js": "^14.7.1",
+    "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
     "mongoose": "^6.9.2",
     "typescript": "^4.9.5"
@@ -27,5 +27,13 @@
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "eslint": "^8.34.0",
     "ts-node": "^10.9.1"
+  },
+  "override": {
+    "discord-api-types": "0.37.35"
+  },
+  "pnpm": {
+    "override": {
+      "discord-api-types": "0.37.35"
+    }
   }
 }
