--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@swc/helpers": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "eslint": "^8.34.0",
+    "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   },
   "override": {
