--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Minecraftサーバーの統計を表示するBOT",
   "main": "index.js",
   "scripts": {
-    "start": "node build/src/index.js",
+    "prepare": "ts-patch install -s",
+    "start": "node dist/index.js",
     "dev": "nodemon --inspect src/index.ts",
-    "reset": "node --loader ts-node/esm src/resetCommands.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,7 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.2.0",
     "mongoose": "^7.3.3",
-    "typescript": "^4.9.5"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@swc/core": "^1.3.64",
@@ -27,7 +28,10 @@
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "eslint": "^8.42.0",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "ts-patch": "^3.0.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript-transform-paths": "^3.4.6"
   },
   "override": {
     "discord-api-types": "0.37.35"
