--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@akki256/discord-interaction": "^3.1.1",
+		"@biomejs/biome": "^1.5.3",
 		"@napi-rs/canvas": "^0.1.41",
 		"axios": "^1.6.0",
 		"discord.js": "^14.11.0",
