Update .gitignore and VS Code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,4 @@
 {
-  "cSpell.words": [
-    "Emojies",
-    "gamertag",
-    "mcid",
-    "myid",
-    "timeframe"
-  ],
-  "eslint.packageManager": "pnpm"
+  "cSpell.words": ["Emojies", "gamertag", "mcid", "myid", "timeframe"],
+  "editor.defaultFormatter": "biomejs.biome"
 }
