config.json → 環境変数への移行

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
-BOT_TOKEN=
-MONGODB_URI=
-MONGODB_DBNAME=
+BOT_TOKEN="DiscordBOTのトークン"
+GUILD_ID="コマンドを登録するサーバーのID (省略した際はグローバルコマンドとして登録)"
+MONGODB_URI="mongoDBに接続するためのURI"
+MONGODB_DBNAME="データベース名"
