--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
 	"description": "Minecraftサーバーの統計を表示するBOT",
 	"main": "index.js",
 	"scripts": {
-		"start": "node build/src/index.js",
+		"start": "node build/index.js",
 		"dev": "nodemon --inspect src/index.ts",
 		"reset": "node --loader ts-node/esm src/resetCommands.ts",
-		"build": "tsc -p ."
+		"build": "tsc -p . && pnpm run copy-assets",
+		"copy-assets": "shx cp -r src/fonts build/fonts && shx cp -r src/images build/images"
 	},
 	"keywords": [],
 	"author": "",
@@ -26,6 +27,7 @@
 		"@swc/core": "^1.3.64",
 		"@swc/helpers": "^0.4.14",
 		"nodemon": "^2.0.22",
+		"shx": "^0.3.4",
 		"ts-node": "^10.9.1"
 	},
 	"override": {
